tests/negative/scope/class-implements-class/test.smol
package testing;

class Alpha {
}

class Beta is Alpha {
}

class Test {

}
